--- a/frontend/src/app/components/home/home.component.css
+++ b/frontend/src/app/components/home/home.component.css
@@ -1,10 +1,210 @@
+@import url('https://fonts.googleapis.com/css?family=Raleway:200');
+
 .home-container {
   display: flex;
   position: relative;
-  justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: 100vh;
+  height: auto;
   width: 100%;
-  background: #cbcb2d;
+  box-shadow: 10px 10px 40px rgba(0, 0, 0, 0.8);
+  font-family: 'Raleway', sans-serif;
+
 }
+
+.first-section {
+  width: 100%;
+  height: 700px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.home-image {
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+
+
+@keyframes animatedgradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.search-container {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 700px;
+  height: 450px;
+  z-index: 2;
+
+}
+
+.gradient-border {
+  --borderWidth: 10px;
+}
+
+.gradient-border:after {
+  content: '';
+  position: absolute;
+  height: calc(99% + var(--borderWidth) * 1.2);
+  width: calc(99% + var(--borderWidth) * 1.3);
+  background: linear-gradient(60deg, #fff80f, #ffa500, #ff0000, #830041);
+  z-index: -1;
+  animation: animatedgradient 2s ease alternate infinite;
+  background-size: 300% 300%;
+  border-radius: 40%;
+}
+
+.search-background {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  background: #fffeee;
+  border-radius: 40%;
+  align-items: center;
+  justify-items: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.search-background h1 {
+  padding-top: 40px;
+  font-family: 'Raleway', sans-serif;
+  font-weight: bold;
+  font-size: 40px;
+  text-shadow: #1c1a1a 1px 1px 1px ;
+
+}
+
+.search-background h2 {
+  font-weight: bold;
+  font-size: 30px;
+  padding-top: 10px;
+
+}
+
+.search-bar {
+  display: flex;
+  width: 420px;
+  height: 55px;
+  align-items: center;
+  border: #3a3939 1px solid;
+  border-radius: 40px 40px 40px 40px;
+  margin-top: 30px;
+  background: white;
+}
+
+.search-input {
+  width: 80%;
+  height: 95%;
+  border: none;
+  outline: none;
+  padding: 0 10px;
+  font-size: 16px;
+  border-radius: 40px 40px 40px 40px;
+
+}
+
+
+.search-bar button {
+  width: 23%;
+  margin-right: 2px;
+  height: 92%;
+  border: none;
+  background-color: #ff7e5f;
+  border-radius: 40px 40px 40px 40px;
+  color: white;
+  font-size: 18px;
+  cursor: pointer;
+
+
+}
+
+.search-bar button:hover {
+  background-color: #ff5a36;
+}
+
+.second-section {
+  width: 100%;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+}
+
+.second-section h1 {
+  font-size: 40px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: bolder;
+  text-shadow: #feb47b  1px 1px 1px;
+  color: #f38837;
+}
+
+.second-section h2 {
+  font-size: 30px;
+  font-weight: bold;
+  height: 5px;
+}
+
+.steps-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 70%;
+  height: 300px;
+  align-items: center;
+  margin-top: 20px;
+
+}
+
+.step {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 300px;
+  height: 300px;
+}
+
+
+.third-section {
+  width: 100%;
+  height: 420px;
+  display: flex;
+  flex-direction: row;
+  background: #ff1515;
+
+}
+
+.left-container {
+  height: 100%;
+  width: 50%;
+  background: #ff1515;
+  display: flex;
+}
+
+
+.right-container {
+  height: auto;
+  width: 50%;
+  background: #e0dbdb;
+}
+
+.XboOIa {
+  fill: #ff1515;
+
+}
+
