--- a/frontend/src/app/components/navbar/navbar.component.css
+++ b/frontend/src/app/components/navbar/navbar.component.css
@@ -6,6 +6,7 @@
   background: whitesmoke;
   color: black;
   width: auto;
+  box-shadow: 10px 10px 50px rgba(10, 11, 0, 0.8);
 }
 
 .left-container {
@@ -15,6 +16,7 @@
 }
 
 .language-switcher {
+
   padding: 20px;
 
 }
@@ -24,6 +26,7 @@
   height: 30px;
   margin-left: 50px; /* Remove padding to ensure proper scaling */
   border-radius: 50%;
+  border: black 0.5px solid;
 }
 
 .language-dropdown {
@@ -77,5 +80,5 @@ h2 {
 
 .material-icons {
   font-size: 30px;
-  color: #b95714;
+  color: #1c1a1a;
 }
