--- a/frontend/src/app/components/home-components/home-first-section/home-first-section.component.css
+++ b/frontend/src/app/components/home-components/home-first-section/home-first-section.component.css
@@ -5,13 +5,16 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-
 }
 
 .home-image {
   width: 100%;
-  height: 100%;
-  z-index: 1;
+  height: auto;
+  object-fit: cover; /* Upewnij się, że obraz wypełnia całą sekcję */
+  position: absolute; /* Zajmuje całą dostępną przestrzeń */
+  top: 0;
+  left: 0;
+  z-index: -1; /* Utrzymanie obrazu w tle */
 }
 
 
@@ -32,8 +35,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 700px;
-  height: 450px;
+  width: 900px;
+  height: 500px;
   z-index: 2;
 
 }
@@ -84,7 +87,7 @@
 
 .search-bar {
   display: flex;
-  width: 420px;
+  width: 520px;
   height: 55px;
   align-items: center;
   border: #3a3939 1px solid;
