--- a/frontend/src/app/components/navbar/navbar.component.css
+++ b/frontend/src/app/components/navbar/navbar.component.css
@@ -7,6 +7,7 @@
   color: black;
   width: auto;
   box-shadow: 10px 10px 50px rgba(10, 11, 0, 0.8);
+
 }
 
 .left-container {
@@ -81,4 +82,20 @@ h2 {
 .material-icons {
   font-size: 30px;
   color: #1c1a1a;
+}
+
+
+.menu {
+  top: 180px;
+  left: 130px;
+  display: flex;
+  width: 500px;
+  height: 300px;
+  padding: 10px 30px;
+  text-align: center;
+  position: absolute;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  z-index: 100;
 }
