--- a/frontend/src/app/components/home-components/home-first-section/home-first-section.component.css
+++ b/frontend/src/app/components/home-components/home-first-section/home-first-section.component.css
@@ -1,20 +1,11 @@
-.first-section {
-  width: 100%;
-  height: 700px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
-
 .home-image {
   width: 100%;
-  height: auto;
-  object-fit: cover; /* Upewnij się, że obraz wypełnia całą sekcję */
-  position: absolute; /* Zajmuje całą dostępną przestrzeń */
+  height: 100%;
+  object-fit: fill;
+  position: absolute;
   top: 0;
   left: 0;
-  z-index: -1; /* Utrzymanie obrazu w tle */
+  z-index: -1; /* Keep the image in the background */
 }
 
 
@@ -31,13 +22,14 @@
 }
 
 .search-container {
-  position: absolute;
+  position: relative; /* Change to relative to keep it within the first section */
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 900px;
-  height: 500px;
-  z-index: 2;
+  width: 100%;
+  max-width: 180%;
+  height: auto;
+  z-index: -1;
 
 }
 
@@ -48,24 +40,27 @@
 .gradient-border:after {
   content: '';
   position: absolute;
-  height: calc(99% + var(--borderWidth) * 1.2);
-  width: calc(99% + var(--borderWidth) * 1.3);
+  height: calc(100% + var(--borderWidth) * 1);
+  width: calc(100% + var(--borderWidth) * 1);
   background: linear-gradient(60deg, #fff80f, #ffa500, #ff0000, #830041);
   z-index: -1;
   animation: animatedgradient 2s ease alternate infinite;
   background-size: 300% 300%;
-  border-radius: 40%;
+  border-radius: 80px 80px 80px 80px;
 }
 
 .search-background {
-  width: 100%;
+  width: 700px;
   height: 100%;
   text-align: center;
   background: #fffeee;
-  border-radius: 40%;
+  border-radius: 80px 80px 80px 80px;
   align-items: center;
   justify-items: center;
   display: flex;
+  padding-right: 20px;
+  padding-left: 20px;
+  padding-bottom: 70px;
   flex-direction: column;
 }
 
@@ -75,13 +70,18 @@
   font-weight: bold;
   font-size: 40px;
   text-shadow: #1c1a1a 1px 1px 1px ;
-
+  word-wrap: break-word;
+  white-space: normal;
+  width: 90%;
 }
 
 .search-background h2 {
   font-weight: bold;
   font-size: 30px;
   padding-top: 10px;
+  word-wrap: break-word;
+  white-space: normal;
+  width: 90%;
 
 }
 
@@ -104,6 +104,7 @@
   padding: 0 10px;
   font-size: 16px;
   border-radius: 40px 40px 40px 40px;
+  z-index: auto;
 
 }
 
@@ -124,4 +125,23 @@
 
 .search-bar button:hover {
   background-color: #ff5a36;
+}
+
+
+@media (max-width: 800px) {
+
+  .search-background {
+    width: 90%;
+    padding-right: 0;
+    padding-left: 0;
+  }
+
+  .gradient-border:after {
+    height: calc(100% + var(--borderWidth) * 1);
+    width: calc(90% + var(--borderWidth) * 1);
+  }
+
+    .search-bar {
+    width: 90%;
+  }
 }
