--- a/frontend/src/app/components/home/home.component.css
+++ b/frontend/src/app/components/home/home.component.css
@@ -12,7 +12,9 @@
 
 .first-section {
   width: 100%;
-  height: 700px;
+  height: auto;
+  padding-top: 100px;
+  padding-bottom: 100px;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -21,21 +23,23 @@
 
 .second-section {
   width: 100%;
-  height: 450px;
+  height: auto;
   display: flex;
   flex-direction: column;
   text-align: center;
   align-items: center;
   background: white;
+  padding-top: 20px;
 }
 
 
 .third-section {
+  width: 100%;
+  height: auto;
   display: flex;
   flex-direction: column;
   text-align: center;
   align-items: center;
-  width: 100%;
-  height: 650px;
   background: #ffab6a;
+  padding-bottom: 50px;
 }
