--- a/frontend/src/app/components/navbar/navbar.component.css
+++ b/frontend/src/app/components/navbar/navbar.component.css
@@ -17,22 +17,24 @@
 }
 
 .language-switcher {
-
-  padding: 20px;
+  width: 30px;
+  height: 30px;
+  margin-left: 70px;
+  align-items: center;
+  display: flex;
 
 }
 
 .language-switcher img {
-  width: 30px;
-  height: 30px;
-  margin-left: 50px; /* Remove padding to ensure proper scaling */
+  width: 35px;
+  height: 35px;
   border-radius: 50%;
   border: black 0.5px solid;
 }
 
 .language-dropdown {
   top: 80px;
-  left: 30px;
+  left: 40px;
   width: auto;
   padding: 10px 30px;
   text-align: center;
@@ -99,3 +101,15 @@ h2 {
   border-radius: 4px;
   z-index: 100;
 }
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.45);
+  z-index: 99;
+  display: none;
+}
+
