--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -2,9 +2,6 @@
 
   <div class="left-container">
     <i class="material-icons" (click)="toggleMenu()">menu</i>
-    <div class="language-switcher" (click)="toggleLanguageDropdown()">
-      <img class="flag" [src]="apiUrl + currentFlag" alt="Current LanguageInterface Flag">
-    </div>
 
     <div class="language-dropdown" *ngIf="showLanguageDropdown">
       <h3>{{getTranslation('chooseLanguage')}} </h3>
@@ -28,3 +25,5 @@
     <h2>Webstaurator</h2>
   </div>
 </div>
+
+<div class="overlay"></div>
