Added first things in menu

--- a/frontend/src/app/components/home-components/home-second-section/home-second-section.component.css
+++ b/frontend/src/app/components/home-components/home-second-section/home-second-section.component.css
@@ -5,8 +5,9 @@ h1 {
   text-shadow: #feb47b 1px 1px 1px;
   color: #f38837;
   width: 90%;
+  margin-left: auto;
+  margin-right: auto;
   height: auto;
-  margin: auto;
 }
 
 h2 {
