--- a/frontend/src/app/components/nav/navbar/navbar.component.css
+++ b/frontend/src/app/components/nav/navbar/navbar.component.css
@@ -16,6 +16,12 @@
 
 }
 
+.left-container h2 {
+  background: linear-gradient(to top, #ff0000, #ff7e5f, #ffa500, #feb47b );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
 .language-switcher {
   width: 30px;
   height: 30px;
@@ -34,7 +40,7 @@
 
 .language-dropdown {
   top: 80px;
-  left: 40px;
+  left: 200px;
   width: auto;
   padding: 10px 30px;
   text-align: center;
@@ -75,11 +81,6 @@
   padding-right: 10px;
 }
 
-h2 {
-  background: linear-gradient(to top, #ff0000, #ff7e5f, #ffa500, #feb47b );
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
 
 .material-icons {
   font-size: 30px;
@@ -88,18 +89,21 @@ h2 {
 
 
 .menu {
-  top: 180px;
-  left: 130px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); /* Center the element */
   display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 500px;
-  height: 300px;
+  height: 600px;
   padding: 10px 30px;
   text-align: center;
-  position: absolute;
+  position: fixed;
   background-color: #fff;
   border: 1px solid #ccc;
-  border-radius: 4px;
   z-index: 100;
+  border-radius: 30px;
 }
 
 .overlay {
@@ -112,4 +116,3 @@ h2 {
   z-index: 99;
   display: none;
 }
-
