--- a/frontend/src/app/components/nav/navbar/navbar.component.css
+++ b/frontend/src/app/components/nav/navbar/navbar.component.css
@@ -95,8 +95,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 500px;
-  height: 600px;
+  width: 600px;
+  height: auto;
   padding: 10px 30px;
   text-align: center;
   position: fixed;
@@ -115,4 +115,11 @@
   background-color: rgba(0, 0, 0, 0.45);
   z-index: 99;
   display: none;
+}
+
+@media (max-width: 1024px) {
+  .menu {
+    width: 100%;
+    height: 100%;
+  }
 }
