--- a/frontend/src/app/components/home-components/home-second-section/home-second-section.component.css
+++ b/frontend/src/app/components/home-components/home-second-section/home-second-section.component.css
@@ -1,3 +1,7 @@
+:host {
+  width: 100%;
+}
+
 h1 {
   font-size: 40px;
   font-family: 'Roboto', sans-serif;
@@ -25,7 +29,7 @@ h2 {
   width: 1100px;
   height: 300px;
   align-items: center;
-  margin-top: 30px;
+  margin:auto;
   overflow: hidden;
 }
 
