--- a/frontend/src/app/components/nav/nav-menu/nav-menu.component.css
+++ b/frontend/src/app/components/nav/nav-menu/nav-menu.component.css
@@ -106,10 +106,13 @@
 
 }
 
+
 @media (max-width: 1024px) {
   .menu {
-    width: 85%;
+    width: 100%;
     height: 100%;
+    padding: 0;
+    border-radius: 0;
   }
 
   .menu-first {
