--- a/frontend/src/app/components/nav/nav-menu-register/nav-menu-register.component.html
+++ b/frontend/src/app/components/nav/nav-menu-register/nav-menu-register.component.html
@@ -3,27 +3,45 @@
     <i class="fa-solid fa-chevron-left" (click)="backToMenu()"></i>
     <h2>{{getTranslation('createAccount')}}</h2>
   </div>
-  <form>
-    <div class="input-container">
-      <label for="name">{{getTranslation('name')}}</label>
-      <input id="name" type="text" [(ngModel)]="name" name="name" placeholder="{{getTranslation('name')}}" required>
-    </div>
-    <div class="input-container">
-      <label for="email">{{getTranslation('email')}}</label>
-      <input id="email" type="email" [(ngModel)]="email" name="email" placeholder="{{getTranslation('email')}}" required>
-    </div>
-    <div class="input-container">
-      <label for="password">{{getTranslation('password')}}</label>
-      <input id="password" type="password" [(ngModel)]="password" name="password" placeholder="{{getTranslation('password')}}" required>
-    </div>
-    <div class="input-container">
-      <label for="confirmPassword">{{getTranslation('confirmPassword')}}</label>
-      <input id="confirmPassword" type="password" [(ngModel)]="confirmPassword" name="confirmPassword" placeholder="{{getTranslation('confirmPassword')}}" required>
-    </div>
+  <div class="form-container">
+    <form [formGroup]="registerForm" (ngSubmit)="register()">
+      <div class="input-container">
+        <label for="name">{{getTranslation('name')}}</label>
+        <input id="name" type="text" formControlName="name" name="name" placeholder="{{getTranslation('name')}}" required>
+      </div>
+      <div class="input-container">
+        <label for="email">{{getTranslation('email')}}</label>
+        <input id="email" type="email" formControlName="email" name="email" placeholder="{{getTranslation('email')}}" required>
+        <div class="error-container" *ngIf="showErrorFor('email')">
+          <i class="fa-solid fa-circle-exclamation"></i>
+          <p>{{getTranslation('emailError')}}</p>
+        </div>
+      </div>
+      <div class="input-container">
+        <label for="password">{{getTranslation('password')}}</label>
+        <input id="password" type="password" formControlName="password" name="password" placeholder="{{getTranslation('password')}}" required>
+        <div class="error-container" *ngIf="showErrorFor('password')">
+          <i class="fa-solid fa-circle-exclamation"></i>
+          <p>{{getTranslation('passwordError')}}</p>
+        </div>
+      </div>
+      <div class="input-container">
+        <label for="confirmPassword">{{getTranslation('confirmPassword')}}</label>
+        <input id="confirmPassword" type="password" formControlName="confirmPassword" name="confirmPassword" placeholder="{{getTranslation('confirmPassword')}}" required>
+        <div class="error-container" *ngIf="showErrorFor('confirmPassword')">
+          <i class="fa-solid fa-circle-exclamation"></i>
+          <p>{{getTranslation('confirmPasswordError')}}</p>
+        </div>
+      </div>
 
-    <button type="submit" (click)="register()">{{getTranslation('createAccount')}}</button>
-  </form>
-
-
+      <button type="submit" [ngClass]="{'invalid-button': !registerForm.valid}">{{getTranslation('createAccount')}}</button>
+      <div class="terms-container">
+        <p> {{getTranslation('registerAccept')}}</p>
+      </div>
+      <div class="last-container">
+        <h2> {{getTranslation('haveAccount')}}</h2>
+      </div>
+    </form>
+  </div>
 
 </div>
