--- a/frontend/src/app/components/nav/nav-menu/nav-menu.component.css
+++ b/frontend/src/app/components/nav/nav-menu/nav-menu.component.css
@@ -94,7 +94,7 @@
   border-radius: 10px;
 }
 
-.fa-bag-shopping, .fa-heart, .fa-user, .fa-comment-dots, .fa-language, .fa-circle-question {
+.fa-bag-shopping, .fa-heart, .fa-user, .fa-comment-dots, .fa-language, .fa-circle-question, .fa-sign-out {
   font-size: 20px;
   color: #ff6200;
   padding: 20px;
