Added visible passwords and start profile component

--- a/frontend/src/app/components/nav/nav-menu-login/nav-menu-login.component.html
+++ b/frontend/src/app/components/nav/nav-menu-login/nav-menu-login.component.html
@@ -10,7 +10,8 @@
       </div>
       <div class="input-container">
         <label for="password">{{getTranslation('password')}}</label>
-        <input id="password" type="password" formControlName="password" name="password" placeholder="{{getTranslation('password')}}" autocomplete="current-password" required>
+          <input id="password" type="password" formControlName="password" name="password" placeholder="{{getTranslation('password')}}" autocomplete="new-password" required>
+          <i class="fa-solid fa-eye" (click)="togglePasswordVisibility('password')"></i>
       </div>
 
       <div class="error-container" *ngIf="isloginError">
