--- a/frontend/src/app/components/nav/nav-menu-profile/nav-menu-profile.component.css
+++ b/frontend/src/app/components/nav/nav-menu-profile/nav-menu-profile.component.css
@@ -1,4 +1,4 @@
-.login-menu {
+.profile-menu {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%); /* Center the element */
@@ -79,16 +79,11 @@ form {
   font-size: 18px;
   border-radius: 10px;
   padding: 5px 0 5px 10px;
-  position: relative;
 }
 
-
-.input-container .fa-eye {
-  position: absolute;
-  right: 100px;
-  top: 50%;
-  transform: translateY(-50%);
-  cursor: pointer;
+.email-input {
+  color: #9f9d9d;
+  background-color: #e8e7e7;
 }
 
 button {
@@ -148,7 +143,7 @@ button:hover {
 
 
 @media (max-width: 1024px) {
-  .login-menu {
+  .profile-menu {
     width: 100%;
     height: 100%;
     padding: 0;
