--- a/frontend/src/app/components/nav/nav-menu-register/nav-menu-register.component.html
+++ b/frontend/src/app/components/nav/nav-menu-register/nav-menu-register.component.html
@@ -19,7 +19,10 @@
       </div>
       <div class="input-container">
         <label for="password">{{getTranslation('password')}}</label>
-        <input id="password" type="password" formControlName="password" name="password" placeholder="{{getTranslation('password')}}" autocomplete="new-password" required>
+        <div class="password-wrapper">
+          <input id="password" type="password" formControlName="password" name="password" placeholder="{{getTranslation('password')}}" autocomplete="new-password" required>
+          <i class="fa-solid fa-eye" (click)="togglePasswordVisibility('password')"></i>
+        </div>
         <div class="error-container" *ngIf="showErrorFor('password')">
           <i class="fa-solid fa-circle-exclamation"></i>
           <p>{{getTranslation('passwordError')}}</p>
@@ -27,7 +30,10 @@
       </div>
       <div class="input-container">
         <label for="confirmPassword">{{getTranslation('confirmPassword')}}</label>
-        <input id="confirmPassword" type="password" formControlName="confirmPassword" name="confirmPassword" placeholder="{{getTranslation('confirmPassword')}}" autocomplete="new-password" required>
+        <div class="password-wrapper">
+          <input id="confirmPassword" type="password" formControlName="confirmPassword" name="confirmPassword" placeholder="{{getTranslation('confirmPassword')}}" autocomplete="new-password" required>
+          <i class="fa-solid fa-eye" (click)="togglePasswordVisibility('confirmPassword')"></i>
+        </div>
         <div class="error-container" *ngIf="showErrorFor('confirmPassword')">
           <i class="fa-solid fa-circle-exclamation"></i>
           <p>{{getTranslation('confirmPasswordError')}}</p>
